Fixed mobile overflow

--- a/client/src/components/TheDibbyExperienceSection/styles.css
+++ b/client/src/components/TheDibbyExperienceSection/styles.css
@@ -14,6 +14,7 @@
   flex-wrap: wrap;
   font-family: 'Open Sans', sans-serif;
   position: relative;
+    overflow-x: hidden;
 }
 
 .experience-text {
